# precice

./: CHANGELOG.md  CMakeLists.txt
examples/solverdummies/c/: CMakeLists.txt  solverdummy.c
src/cplscheme/tests/systemtest/: .gitignore  CMakeLists.txt  README.md  dummy_parallel.cpp  dummy_serial.cpp  makeall.sh  precice-config-hybrid.xml  runParallel.sh  runSerial.sh
src/precice/bindings/python_future/test/: SolverInterface.cpp  solverdummy.py  test_bindings_module.pyx
tools/solverdummies/: precice-config.xml
tools/solverdummies/cpp/: CTestTestfile.cmake  solverdummy.cpp
